Added top level documentation page.

--- a/index_ssht.html
+++ b/index_ssht.html
@@ -19,7 +19,7 @@ href="http://dx.doi.org/10.1111/XXX">DOI</a>).
 <p>
 This documentation outlines the various harmonic transforms supported
 in SSHT, before describing installation details and documenting the C,
-Fortran and MATLAB source code.  Support, version, license and reference
+Fortran and MATLAB source code.  Reference, version, and license 
 information then follows.
 
 For an overview see the <a href="../README.txt">README.txt</a>
@@ -85,9 +85,7 @@ Before compiling you may need to edit the <a href="../makefile">makefile</a> to 
 compiler and to link with the appropriate libraries.  Once you have
 set the makefile up for your system then the S2DW library may be
 compilied by running:
-<blockquote>   
-<code> >> make lib</code>
-</blockquote>
+<pre> >> make lib</pre>
 
 For details on how to use the S2DW library code see the documentation
 <a href="#library">below<a>.
