Corrected minor typos in documentation.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ SSHT 0.1 released privately.
   makefile to specify your compiler and to link with the appropriate libraries.
 
   <p> Once you have set the makefile up for your system,
-  <strong>SSHT</strong> may be compilied by running:
+  <strong>SSHT</strong> may be compiled by running:
 
   <pre> >> make all</pre> 
 
@@ -261,7 +261,7 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
   Plot function on sphere
 
   <a href="../src/matlab/ssht_s2c.m">ssht_s2c</a>
-  Convert spherical to carteisan coordinates
+  Convert spherical to cartesian coordinates
 
   <a href="../src/matlab/ssht_sampling.m">ssht_sampling</a>
   Compute sample positions
