Added log to documentation.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ harmonics, sphere, transforms, fourier, fast, algorithms, mcewen, wiaux" />
   <table border="0" cellspacing="0">
     <tr>
       <td width=200 align="right" valign="top">
-	<img src="images/szip_logo.jpg" width="140" height="140" border=0> 
+	<img src="images/logo.jpg" width="140" height="140" border=0> 
       </td>
       <td width=500 align="left" valign="center">
 	<h1 class="title">ssht<span class="fade">0.1</span></h1>
