Updated matlab demo 7 to produce paper ready plots.

--- a/index.html
+++ b/index.html
@@ -106,10 +106,9 @@ SSHT 0.1 released privately.
   sphere, with exact forward and inverse transforms for band-limited
   signals.  In practice reconstruction accuracy is limited by machine
   precision.  For all of the algorithms we find maximum reconstruction
-  errors are of the order 10^(-12) or smaller for moderate
-  band-limits.  Please set our paper for a discussion of the various
-  algorithms implemented in the SSHT package and for a comparison of
-  their performance.
+  errors are of the order 10^(-10) or considerably smaller.  Please
+  set our paper for a discussion of the various algorithms implemented
+  in the SSHT package and for a comparison of their performance.
 
 
 <!--------------------------------------------------------------->  
