Added documentation for matlab function to plot harmonic coefficients.

--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
   <a href="../src/matlab/ssht_inverse_adjoint.m">ssht_inverse_adjoint</a>
   Compute adjoint inverse spin spherical harmonic transform
 
+  <a href="../src/matlab/ssht_plot_harmonic.m">ssht_plot_harmonic</a>
+  Plot spherical harmonic coefficients
+
   <a href="../src/matlab/ssht_plot_mollweide.m">ssht_plot_mollweide</a>
   Plot function using Mollweide projection
 
