--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
   href="http://www.epfl.ch/" target="_top">EPFL</a>).  Both Jason and
  Yves are interested in fundamental signal processing on the sphere and
  applications of their techniques to problems in astrophysics and
- biomedical imaging.  See their web pages for mode information.</p>
+ biomedical imaging.  See their web pages for more information.</p>
 
   <p>
   <img src="images/photo_jason.jpg" width="100"
