Added matlab demo8 to plot spherical harmonics; Some minor updates to demo6 and parametric plotting on the sphere.

--- a/index.html
+++ b/index.html
@@ -329,7 +329,10 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
 
   <a href="../src/matlab/ssht_demo7.m">ssht_demo7</a>
   Integrate a band-limited function on the sphere using the
-  symmetrised quadrature weights.</pre>
+  symmetrised quadrature weights.
+
+  <a href="../src/matlab/ssht_demo8.m">ssht_demo8</a>
+  Plot spherical harmonic functions on the sphere.</pre>
 
   <p> To access the documentation for each demo in Matlab, simply
   run:
