Renamed demo8 for plotting spherical harmonic functions as demo0.

--- a/index.html
+++ b/index.html
@@ -304,6 +304,9 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
   progressively become more complicated/flexible.
 
   <pre>
+  <a href="../src/matlab/ssht_demo0.m">ssht_demo0</a>
+  Plot spherical harmonic functions on the sphere.
+
   <a href="../src/matlab/ssht_demo1.m">ssht_demo1</a>
   Simple demo to compute inverse and forward transform of complex
   scalar function, using simplest interface with default options.
@@ -329,12 +332,9 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
 
   <a href="../src/matlab/ssht_demo7.m">ssht_demo7</a>
   Integrate a band-limited function on the sphere using the
-  symmetrised quadrature weights.
+  symmetrised quadrature weights. </pre>
 
-  <a href="../src/matlab/ssht_demo8.m">ssht_demo8</a>
-  Plot spherical harmonic functions on the sphere.</pre>
-
-  <p> To access the documentation for each demo in Matlab, simply
+ <p> To access the documentation for each demo in Matlab, simply
   run:
   <pre> >> help &ltdemo&gt</pre>
   <p> where <code>&ltdemo&gt</code> is the demo name.
