Added paper references (including arxiv numbers).

--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@ Private release of SSHT 0.1.
   The <strong>SSHT</strong> code provides functionality to perform fast and exact
   spin spherical harmonic transforms based on the sampling theorem on the
   sphere derived in our paper:
-  <i>A novel sampling theorem on the sphere</i> (<a
-  href="http://arxiv.org/abs/XXX.XXX">ArXiv</a>|<a
-  href="http://dx.doi.org/10.1111/XXX">DOI</a>).
+  <i><a href="http://www.mrao.cam.ac.uk/~jdm57/publications.html#mcewen:fssht">A
+  novel sampling theorem on the sphere</a> </i>
+  (<a href="http://arxiv.org/abs/1110.6298">ArXiv</a>
+  | <a href="http://dx.doi.org/10.1109/TSP.2011.2166394">DOI</a>).
 
   In some applications, adjoint forward and inverse spherical harmonic
   transforms are also required (for example, when solving convex
   optimisation problems).  We provide functionality to perform
   fast and exact adjoint transforms, based on the fast algorithms
   derived in our paper: 
-  <i>Efficient and compressive sampling on the sphere</i> (<a
-  href="http://arxiv.org/abs/XXX.XXX">ArXiv</a>|<a
-  href="http://dx.doi.org/10.1111/XXX">DOI</a>).
+  <i><a href="http://www.mrao.cam.ac.uk/~jdm57/publications.html#mcewen:css2">Efficient
+  and compressive sampling on the sphere</a></i>.
 
   <p>
   This documentation outlines the various harmonic transforms
@@ -367,10 +367,11 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
    href="http://www.jasonmcewen.org/">http://www.jasonmcewen.org/</a>)
   and our related academic paper:
 
-<blockquote> J. D. McEwen and Y. Wiaux, <a
- href="http://www.mrao.cam.ac.uk/~jdm57/publications.html#mcewen:fssht">A
-novel sampling theorem on the sphere</a>, IEEE Trans. Sig. Proc., in
-press, 2011 (arXiv:xxxx.xxxx).  </blockquote>
+<blockquote> J. D. McEwen and
+ Y. Wiaux, <a href="http://www.mrao.cam.ac.uk/~jdm57/publications.html#mcewen:fssht">A
+ novel sampling theorem on the sphere</a>, IEEE Trans. Sig. Proc., in
+ press, 2011 (<a href="http://arxiv.org/abs/1110.6298">ArXiv</a>
+ | <a href="http://dx.doi.org/10.1109/TSP.2011.2166394">DOI</a>). </blockquote>
 
   <p> If you make use of our fast adjoint algorithms, then please also cite:
 
@@ -378,7 +379,7 @@ press, 2011 (arXiv:xxxx.xxxx).  </blockquote>
 D. Van De Ville and Y. Wiaux, <a
  href="http://www.mrao.cam.ac.uk/~jdm57/publications.html#mcewen:css2">Efficient
 and compressive sampling on the sphere</a>, IEEE Trans. Sig. Proc.,
-submitted, 2011 (arXiv:xxxx.xxxx).
+submitted, 2011.
 </blockquote>
 
 
