--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ harmonics, sphere, transforms, fourier, fast, algorithms, mcewen, wiaux" />
 	<img src="images/logo.jpg" width="140" height="140" border=0> 
       </td>
       <td width=500 align="left" valign="center">
-	<h1 class="title">ssht<span class="fade">1.0b1</span></h1>
+	<h1 class="title">ssht</h1>
 	<p id="slogantitle">Spin spherical harmonic transforms</p>
       </td>			
     </tr>
