--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ harmonics, sphere, transforms, fourier, fast, algorithms, mcewen, wiaux" />
 
   <table border="0" cellspacing="0">
     <tr>
-      <td width=200 align="right" valign="top">
+      <td width=200 height=142 align="right" valign="top">
 	<img src="images/logo.jpg" width="140" height="140" border=0> 
       </td>
       <td width=500 align="left" valign="center">
