Updated documentation to reflect previous update (new Wigner functionality).

--- a/index.html
+++ b/index.html
@@ -262,6 +262,12 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
   <a href="../src/matlab/ssht_c2s.m">ssht_c2s</a>
   Convert cartesian to spherical coordinates
 
+  <a href="../src/matlab/ssht_dl.m">ssht_dl</a>
+  Compute Wigner small-d functions
+
+  <a href="../src/matlab/ssht_dln.m">ssht_dln</a>
+  Compute Wigner small-d functions for given n
+
   <a href="../src/matlab/ssht_elm2ind.m">ssht_elm2ind</a>
   Convert harmonic indices to vector index
 
@@ -337,7 +343,11 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
 
   <a href="../src/matlab/ssht_demo7.m">ssht_demo7</a>
   Integrate a band-limited function on the sphere using the
-  symmetrised quadrature weights. </pre>
+  symmetrised quadrature weights. 
+
+  <a href="../src/matlab/ssht_demo8.m">ssht_demo8</a>
+  Evaluate Wigner and spherical harmonic functions.
+  </pre>
 
  <p> To access the documentation for each demo in Matlab, simply
   run:
