Update download site in documentation

--- a/index.html
+++ b/index.html
@@ -351,12 +351,10 @@ and <a href="f90/html/index.html">Fortran 90</a> implementations.  The
   available under the license described <a
    href="#license">below</a>.
 
-  <p>To receive a copy of <strong>SSHT</strong> by email please
-  complete the download form, available by clicking the following
-  icon:
+  <p><strong>SSHT</strong> can be downloaded from the following site:
 
   <p align=center>
-  <a href=http://www.mrao.cam.ac.uk/~jdm57/download.html> <img src="images/download_icon.gif"> </a>
+  <a href="https://github.com/astro-informatics/ssht"> <img src="images/download_icon.gif"> </a>
   </p>
 
 <!--------------------------------------------------------------->
