--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ harmonics, sphere, transforms, fourier, fast, algorithms, mcewen, wiaux" />
   <a href="#installation">Installation</a> |
   <a href="#documentation">Source</a> |
   <a href="#matlab">Matlab</a> |
-  <a href="#python">python</a> |
+  <a href="#python">Python</a> |
   <a href="#download">Download</a> |
   <a href="#referencing">Referencing</a> |  
   <a href="#version">Version</a> |
