--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ harmonics, sphere, transforms, fourier, fast, algorithms, mcewen, wiaux" />
 <h2>News</h2>
 
 <ul>
+<li><strong>April 2018</strong><br />
+Release of SSHT 1.2b1 (support to link to C++).
+</li>
 <li><strong>April 2017</strong><br />
 Release of SSHT 1.1b1 (python support).
 </li>
@@ -460,12 +463,13 @@ D. Van De Ville and Y. Wiaux, <a
 <a name="version"><h2>Version</h2></a>
 
   <p>
-  Version: 1.1b1<br>
-  Release date: April 2017
+  Version: 1.2b1<br>
+  Release date: April 2018
 
   <h4>Version history</h4>
   <p>
  <ul>
+   <li>1.2b1 (April 2018): Support for linking with C++.</li>
    <li>1.1b1 (April 2017): Python interface added and support for C99 standard.</li>
    <li>1.0b1 (31 October 2011): Public release of first beta.</li>
    <li>0.2 (20 May 2011): Fast adjoint algorithms added.</li>
